Adiciona documentação do swagger no método index de product
